--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,40 @@ nav a:hover
         border-top-color: transparent;
     }
 }
+
+.search
+{
+    padding: 0 16px;
+    border: #f2f2f2;
+}
+
+.form
+{
+    border-color: #0065FC;
+    padding: 0 16px;
+    display: flex;
+}
+i
+{
+    padding: 16px 20px; 
+    background-color: #f2f2f2;
+    border-radius: 16px 0 0 16px;
+}
+input::placeholder
+{
+    border: none;
+    font-weight: bold;
+    color: inherit;
+}
+#sub
+{
+    background-color: #0065FC;
+    font-weight: bold;
+    color: white;
+    border-radius: 0 16px 16px 0;
+    border: none;
+    cursor: pointer;
+}
+
+
+
