--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,22 @@
 @font-face 
 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway';
     src: url('Raleway-Regular.ttf') format('truetype')
 }
 
 *
 {
     box-sizing: border-box;
-    font-family: 'Raleway-Regular', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    
+    
 }
 
+body
+{
+    margin: 0 150px;
+}
 a
 {
     color: inherit;
@@ -47,7 +54,7 @@ nav a:hover
     display: flex;
     
 }
-@media (max-width: 768px)
+@media screen and (max-width: 768px)
 {
     #logo
     {
@@ -83,7 +90,7 @@ nav a:hover
     padding: 0 16px;
     display: flex;
 }
-i
+.form i
 {
     padding: 16px 20px; 
     background-color: #f2f2f2;
@@ -91,7 +98,6 @@ i
 }
 input::placeholder
 {
-    border: none;
     font-weight: bold;
     color: inherit;
 }
@@ -104,6 +110,72 @@ input::placeholder
     border: none;
     cursor: pointer;
 }
+.filtreM
+{
+    border: 1px solid black;
+    font-weight: bold;
+    margin: 16px 0 0 16px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.filtreM i
+{
+    background-color:  #deebff;
+    padding: 16px ;
+    border-radius: 16px ;
 
 
+    
+}
+.filtre1
+{
+    
+    border: 2px solid #f2f2f2;
+    border-radius: 32px;
+    
+}
+.filtre2
+{
+    border: 2px solid #f2f2f2;
+    border-radius: 32px;
+    
+}
+.filtre3
+{
+    border: 2px solid #f2f2f2;
+    border-radius: 32px;
+}
+.filtre4
+{
+    border: 2px solid #f2f2f2;
+    border-radius: 32px;
+}
+.filtreM a
+{
+    margin: 0 20px 0 0;
 
+}
+.info
+{
+    
+    display: flex;
+    align-items: center;
+}
+.info i
+{
+    margin: 16px ;
+    padding: 10px ;
+    border: 1px solid lightgray; 
+    border-radius: 20px;   
+}
+.Hébmars
+{display: flex;
+}
+aside{
+    display: flex;
+}
+.Actmars
+{
+    display: flex;
+}
