--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,17 @@
 body{  
     max-width: 1400px;
     margin: auto;
-    padding: 0 10px;
+   
     font-family: "raleway",sans-serif ;
-    font-size: 16px;
+    font-size: 16px ;
 }
 header{
+    padding: 0 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.fa-grey{
+.HébMarspop i.grey{
     color: #f2f2f2;
 }
 #logo{
@@ -58,6 +59,9 @@ header a:hover{
     border-top: 3px solid #0065fc;
     color: #0065fc;
 }
+main{
+    padding: 0 25px;
+}
 h1{
     font-weight: bold;
     font-size: 22px;  
@@ -72,6 +76,8 @@ h1{
 .form{   
     padding: 10px 0;
     display: flex;
+   
+   
 }
 .form i{
     padding: 25px 17px 25px 20px;
@@ -104,6 +110,10 @@ input::placeholder {
     box-shadow: 0 0 12px #deebff;
     cursor: pointer;
 }
+.fa-magnifying-glass{
+    display: none;
+    
+}
 .AllFilter{
     display: flex;
     align-items: center;
@@ -118,7 +128,6 @@ input::placeholder {
     display: flex;
     align-items:center ;
 }
-
 .fafiltre{ 
     margin: -3px;
     height: 55px;
@@ -143,11 +152,10 @@ input::placeholder {
 .info{
     display: flex;
     align-items: center;
-    margin:20px 0 30px 0;;
-    gap: 1%;
-}
+    margin:20px 0 0 0;
+}   
 .info p{
-    margin: 0;
+    margin: 0 10px;
 }
 .icoinfo{
     height: 25px;
@@ -179,22 +187,24 @@ input::placeholder {
     font-size: 19px; 
 }
 .hébmars{
+    margin-top: 30px;
     flex-basis: 60%;
     flex-grow: 1;
     background: #f2f2f2;
     border-radius: 25px; 
 }
 .mostpop{
+    margin-top: 30px;
     flex-basis: 29%;
     background: #f2f2f2;
     border-radius: 25px;
     flex-grow: 1;   
 }    
 .Flexfilterhéb{
- display: flex;
- justify-content: space-around;
- flex-wrap: wrap;
- padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
 }
 .CardHéb{
     border-radius:25px;
@@ -252,8 +262,12 @@ input::placeholder {
   padding: 15px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   font-size: 14px;
 } 
+.descpop{
+    line-height: 20px;
+}
 article h2{
     margin-bottom: 25px
 }
@@ -263,7 +277,8 @@ article h2{
     border-radius: 25px;
     display: flex;
     justify-content: space-between; 
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+    
     margin-bottom: 40px;
 }
 .Allactmars img{
@@ -271,6 +286,7 @@ article h2{
     width:100%;
     object-fit: cover;
     border-radius: 25px 25px 0 0;
+   
 }
 .Cardact{ 
     height: auto;
@@ -279,6 +295,8 @@ article h2{
     flex-direction: column;
     border-radius: 25px;
     flex-wrap: wrap;
+    
+    
 }
 .Carddescact{
     border-radius: 0 0 25px 25px ;
@@ -309,18 +327,23 @@ article h2{
 .cardcolumn{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;  
+    justify-content: space-between;
+
+
 }
 footer{
     background: #f2f2f2;
+
 }
 .allinfofooter{
+    
     display: flex;
     flex-basis: 100%;
     padding: 35px 0;
     flex-wrap: wrap;
 }
 .infofooter{
+    padding: 0 25px;
     display: flex;
     flex-direction: column;
     flex-basis: 33%;
@@ -338,4 +361,102 @@ footer{
 }
 .icogrey i{
     color: #f2f2f2;
+}
+@media (max-width:1350px){
+    .Cardact, .cardcolumn{
+        width: 48%;
+    }
+    .cardcolumn .Cardact{
+        width: 100%;
+    }
+    .cardcolumn, .Cardact:first-of-type{
+        margin-bottom: 15px;
+    }
+}
+@media (max-width: 1050px){
+    .HébMarspop{
+        display: flex;
+        flex-direction: column-reverse;       
+    }   
+}
+
+@media (max-width: 768px){
+    header{
+        flex-wrap: wrap;
+        padding: 0;
+    }
+    #logo{ 
+       margin: auto;
+       padding: 0;    
+    }    
+    nav{
+        flex-basis: 100%; 
+        margin-bottom: 15px;
+    }    
+    nav a{
+        flex-basis: 50%;
+        text-align: center;
+        border-bottom: 3px solid lightgray;
+        padding: 35px 0 15px 0;   
+    }
+   nav a:hover{
+        border-bottom: 3px solid #0065FC;
+        border-top-color: transparent;
+    }
+    h1{
+       padding-bottom: 5px;
+    }
+    section{
+        padding: 0 20px;
+    }
+    main{
+       padding: 0;
+    } 
+    .form{
+        margin-bottom: 15px;
+    }
+    .AllFilter h3{
+        width: 100%;
+        margin-bottom: 10px;
+        
+        
+    }
+    .AllFilter{
+        padding: 0;
+    }
+    .mostpop{
+        
+        border-radius:0 ;
+    }
+    .hébmars{
+        border-radius: 0;
+        background-color: white;
+       
+    }
+    .hébmars a{
+        margin: 0;
+        padding: 0 0 0 25px;
+    }
+    .CardHéb{
+        width: 100%;
+    }
+    .Flexfilterhéb{
+        padding:15px 0;
+
+    }
+
+    .cardcolumn{
+      flex-grow: 1;
+    }
+    article{
+        padding: 0 25px;
+    }
+    .allinfofooter{
+       flex-direction: column;
+       padding: 35px 0 0 0;
+    }
+    .infofooter{
+        margin-bottom: 25px;
+    }
+    
 }
