--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@
 body{  
     max-width: 1400px;
     margin: auto;
-   
     font-family: "raleway",sans-serif ;
     font-size: 16px ;
 }
@@ -63,8 +62,8 @@ main{
     padding: 0 25px;
 }
 h1{
-    font-weight: bold;
-    font-size: 22px;  
+    font-weight: 800;
+    font-size:  22px;  
 }
 .desc{
     margin-bottom: 10px;
@@ -77,7 +76,6 @@ h1{
     padding: 10px 0;
     display: flex;
     width: auto;
-   
 }
 .form i:first-of-type{
     padding: 25px 17px 25px 20px;
@@ -87,8 +85,6 @@ h1{
 } 
 .dnone{
     color: transparent;
-    
-   
 }
 input{
     padding-right: 25px;
@@ -116,8 +112,7 @@ input::placeholder {
     cursor: pointer;
 }
 .fa-magnifying-glass{
-    display: none;
-    
+    display: none;   
 }
 .AllFilter{
     display: flex;
@@ -252,10 +247,6 @@ input::placeholder {
     margin-bottom: 30px;
     border-radius: 25px ;
 }
-
-
-    
-
 .Cardpop img{  
     border-radius: 25px 0 0 25px;
     height: 150px ;
@@ -272,8 +263,7 @@ input::placeholder {
   width: 100%;
 } 
 .descpop{
-    line-height: 20px;
-    
+    line-height: 20px;   
 }
 article h2{
     margin-bottom: 25px
@@ -285,25 +275,21 @@ article h2{
     display: flex;
     justify-content: space-between; 
     flex-wrap: wrap;
-    
     margin-bottom: 40px;
 }
 .Allactmars img{
     height: auto;
     width:100%;
     object-fit: cover;
-    border-radius: 25px 25px 0 0;
-   
+    border-radius: 25px 25px 0 0;   
 }
 .Cardact{ 
     height: auto;
-    width: 310px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     border-radius: 25px;
-    flex-wrap: wrap;
-    
-    
+    flex-wrap: wrap;    
 }
 .Carddescact{
     border-radius: 0 0 25px 25px ;
@@ -321,7 +307,6 @@ article h2{
 .Cardpictact3{
     display: flex;
     height: 120px;
-
 }
 .Cardpictact5{
     display: flex;
@@ -335,15 +320,11 @@ article h2{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-
 }
 footer{
     background: #f2f2f2;
-
 }
-.allinfofooter{
-    
+.allinfofooter{   
     display: flex;
     flex-basis: 100%;
     padding: 35px 0;
@@ -370,15 +351,16 @@ footer{
     color: #f2f2f2;
 }
 @media (max-width:1350px){
+    
     .Cardact, .cardcolumn{
         width: 48%;
+        margin-bottom: 25px;
     }
     .cardcolumn .Cardact{
         width: 100%;
+        margin-bottom: 0;
     }
-    .cardcolumn, .Cardact:first-of-type{
-        margin-bottom: 15px;
-    }
+   
 }
 @media (max-width: 1050px){
     .HébMarspop{
@@ -386,7 +368,6 @@ footer{
         flex-direction: column-reverse;       
     }   
 }
-
 @media (max-width: 768px){
     header{
         flex-wrap: wrap;
@@ -420,11 +401,7 @@ footer{
        padding: 0;
     } 
     .form{
-        margin-bottom: 15px;
-       
-    }
-    input {
-        
+        margin-bottom: 15px;  
     }
     #sub{
        display: none;   
@@ -438,43 +415,58 @@ footer{
         position: relative;
         right: 10px;
     }
-    
     .AllFilter h3{
         width: 100%;
-        margin-bottom: 10px;
-        
-        
+        margin-bottom: 10px;   
     }
     .AllFilter{
         padding: 0;
     }
-    .mostpop{
-        
+    .filter{
+        margin-left: 0;
+    }
+    .mostpop{ 
         border-radius:0 ;
     }
-    .Cardpop img{
-       
+    .allcardpop{
+        padding: 38px 20px 0;
+    }
+    .HébMarspop h2{
+        margin-left: 20px;
     }
     .hébmars{
         border-radius: 0;
         background-color: white;
-       
     }
     .hébmars a{
         margin: 0;
-        padding: 0 0 0 25px;
+        padding: 0 0 0 15px;
     }
     .CardHéb{
         width: 100%;
+        margin-bottom: 0;
     }
     .Flexfilterhéb{
         padding:15px 0;
-
+    }
+    article h2{
+        margin-left: 15px;
+    }
+    .Allactmars{
+        display: block;
+       padding: 0 15px;
+    }
+        
+    .cardcolumn{
+        gap: 15px;
     }
 
-   
-    article{
-        padding: 0 25px;
+    .Cardact, .cardcolumn{
+        width: 100%; 
+        margin-bottom: 15px;
+    }
+    .Cardpictact1and4, .Cardpictact2, .Cardpictact3, .Cardpictact5, .Cardpictact6{
+        height: 155px;
     }
     .allinfofooter{
        flex-direction: column;
@@ -482,6 +474,6 @@ footer{
     }
     .infofooter{
         margin-bottom: 25px;
-    }
-    
+        padding: 0 20px;
+    }   
 }
