--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,6 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-.HébMarspop i.grey{
-    color: #f2f2f2;
-}
 #logo{
     padding: 20px 0 0 20px;
     width: 100px; 
@@ -62,8 +59,8 @@ main{
     padding: 0 25px;
 }
 h1{
-    font-weight: 800;
-    font-size:  22px;  
+    font-weight: bold;
+    font-size:  24px ;  
 }
 .desc{
     margin-bottom: 10px;
@@ -88,11 +85,12 @@ h1{
 }
 input{
     padding-right: 25px;
-    padding-left: 20px;
+    padding-left: 20px;  
 }
 input::placeholder {
     color:inherit;
-    font-size:16px;  
+    font-size:16px;
+    width: auto;  
 }  
 #search{
     border:1px solid #f2f2f2;
@@ -160,6 +158,7 @@ input::placeholder {
 .icoinfo{
     height: 25px;
     width: 25px;
+    min-width: 25px;
     border: 2px solid #f2f2f2;
     display: flex;
     align-items: center;
@@ -173,6 +172,9 @@ input::placeholder {
     flex-wrap: wrap;
     gap: 3%;
     margin-bottom: 50px;
+}
+.HébMarspop i.grey{
+    color: #f2f2f2;
 }
 .HébMarspop h2{
     margin: 40px 0 0 35px;
@@ -199,7 +201,8 @@ input::placeholder {
     background: #f2f2f2;
     border-radius: 25px;
     flex-grow: 1;   
-}    
+} 
+
 .Flexfilterhéb{
     display: flex;
     justify-content: space-around;
@@ -262,6 +265,9 @@ input::placeholder {
   font-size: 14px;
   width: 100%;
 } 
+.Carddescpop .margb{
+    margin-bottom: 4px;
+}
 .descpop{
     line-height: 20px;   
 }
@@ -294,7 +300,8 @@ article h2{
 .Carddescact{
     border-radius: 0 0 25px 25px ;
     height: 55px;
-    padding: 20px 20px;   
+    padding: 20px 20px; 
+    font-size: 15px;  
 }
 .Cardpictact1and4{
     display: flex;
@@ -359,8 +366,7 @@ footer{
     .cardcolumn .Cardact{
         width: 100%;
         margin-bottom: 0;
-    }
-   
+    } 
 }
 @media (max-width: 1050px){
     .HébMarspop{
@@ -427,9 +433,11 @@ footer{
     }
     .mostpop{ 
         border-radius:0 ;
+        width: 100%;
     }
     .allcardpop{
         padding: 38px 20px 0;
+        
     }
     .HébMarspop h2{
         margin-left: 20px;
@@ -437,6 +445,7 @@ footer{
     .hébmars{
         border-radius: 0;
         background-color: white;
+        width: 100%;
     }
     .hébmars a{
         margin: 0;
@@ -455,12 +464,10 @@ footer{
     .Allactmars{
         display: block;
        padding: 0 15px;
-    }
-        
+    }    
     .cardcolumn{
         gap: 15px;
     }
-
     .Cardact, .cardcolumn{
         width: 100%; 
         margin-bottom: 15px;
@@ -476,4 +483,30 @@ footer{
         margin-bottom: 25px;
         padding: 0 20px;
     }   
+}
+@media (max-width: 375px){
+    #search{
+       width: 100%;
+    }
+    .Carddescact{
+        font-size: 12px 16px;
+        padding: 14px;
+    }
+    .Carddescpop{
+        font-size: 13px;
+        padding: 8px;
+}
+@media (max-width: 340px){
+    body{
+        font-size: 14px ;
+       
+    }
+    .Carddescpop{
+        font-size: 13px;
+        padding: 8px;
+    }
+    .Cardpop img{
+        min-width: 35%;
+       
+    }
 }
